<resources>
    <string name="app_name">treemap</string>
    <string name="title_activity_maps">Map</string>
    <string name="tree_marker">Tree marker</string>
    <string name="edit_tree">Edit tree</string>
    <string name="basic_information">Basic information</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_tree">Add new tree</string>
    <string name="tree_location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="show_description">Show description</string>
    <string name="close">Close</string>
    <string name="loading_map">Loading map</string>
    <string name="gradient">Gradient</string>
    <string name="save_tree">Save tree</string>
    <string name="change_location">Change location</string>
    <string name="new_tree">New tree</string>
    <string name="species">Species</string>
    <string name="height">Height</string>
    <string name="number_of_trunks">Number of trunks</string>
    <string name="trunk_girth">Trunk girth</string>
    <string name="diameter_of_crown">Diameter of crown</string>
    <string name="age">Age</string>
    <string name="select_tree_species">Select tree species…</string>
    <string name="tree_planting_type">Tree planting type</string>
    <string name="status">Status</string>
    <string name="height_of_the_first_branch">Height of the first branch</string>
    <string name="condition_assessment">Condition assessment</string>
    <string name="tree_id">Tree id</string>
    <string name="author_of_tree">Author of tree</string>
    <string name="condition_assessment_holder">%1$s/5</string>
    <string name="create_time">Create time</string>
    <string name="update_time">Update time</string>
    <string name="user_location">User location</string>
    <string-array name="status_types">
        <item>Select status…</item>
        <item>Alive</item>
        <item>Danger</item>
        <item>Dead</item>
    </string-array>
    <string name="tree_detail">Tree detail</string>
    <string name="tree_location_holder">%1$s, %2$s</string>
    <string name="location_access_denied">Location access denied</string>
    <string name="tree_id_plug">Will appear after saving</string>
    <string-array name="planting_types">
        <item>Select type…</item>
        <item>Self planting</item>
        <item>Cultural planting</item>
    </string-array>
    <string name="select_species">Select tree species</string>
    <string name="empty_field_warning">This field cannot be empty</string>
    <string name="error_message">Failed to upload data</string>
    <string name="loading">Loading…</string>
    <string name="loading_error_massage">Error while loading data</string>
    <string name="try_again">Try again</string>
    <string name="comment">Comment</string>
    <string name="comments">comments</string>
    <string name="topAppBar">topAppBar</string>
    <string name="some_comment">Some comment</string>
    <string name="user_name">user name</string>
    <string name="no_comments">Нет комментариев по данному дереву</string>
</resources>