<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.treedetail.TreeDetailFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.fragment.app.FragmentContainerView xmlns:map="http://schemas.android.com/apk/res-auto"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:clickable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                map:cameraZoom="18"
                map:liteMode="true" />

            <View
                android:id="@+id/line_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:background="@color/black"
                tools:layout_editor_absoluteX="16dp"
                tools:viewBindingIgnore="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                    tools:viewBindingIgnore="true" />

                <TextView
                    android:id="@+id/latitude_value"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="24dp"
                    android:gravity="end"
                    android:textSize="20sp"
                    tools:text="Value" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude"
                    tools:viewBindingIgnore="true" />

                <TextView
                    android:id="@+id/longitude_value"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="24dp"
                    android:gravity="end"
                    android:textSize="20sp"
                    tools:text="Value" />
            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/change_location_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/change_location" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/species" />

            <TextView
                android:id="@+id/tree_species_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_trunks" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number_of_trunks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trunk_girth" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/trunk_girth_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diameter_of_crown" />

            <TextView
                android:id="@+id/diameter_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/age_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_of_the_first_branch" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/height_to_first_branch_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tree_planting_type" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/planting_type_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>